--- a/src/theme/main.css
+++ b/src/theme/main.css
@@ -4,13 +4,6 @@
   font-weight: bold;
   font-size: small;
 } */
-
-ion-grid {
-  --ion-grid-width: 350px;
-  --ion-grid-columns: 8;
-  --ion-grid-column-padding: 16px;
-}
-
 ion-label {
   text-transform: capitalize;
 }
@@ -42,6 +35,12 @@ h4 {
 p {
   font-size: 17px !important;
   line-height: 27px !important;
+  font-weight: 500 !important;
+}
+
+.p2 {
+  font-size: 14px !important;
+  line-height: 24px !important;
   font-weight: 500 !important;
 }
 
@@ -92,31 +91,58 @@ p {
   align-items: center;
 }
 
-ion-toolbar {
-  --background: var(--ion-background-color);
-  --color: var(--ion-text-color);
-  --border-color: var(--ion-color-primary);
-  --box-shadow: none;
-  --padding-top: 6px;
-  --padding-bottom: 6px;
-}
-
 ion-input.message {
-  --border-radius: 9px;
-  --background-color: var(--ion-color-light) !important;
+  /* --border-radius: 9px; */
+  background-color: var(--ion-color-light) !important;
   --placeholder-opacity: 0.5;
 }
 
 .message-input {
-  background-color: var(--ion-color-light) !important;
-  border: 1px solid var(--ion-color-primary);
+  /* background-color: var(--ion-color-light) !important; */
   margin: 12px;
   padding: 12px;
   border-radius: 16px;
 }
 
-ion-item.message {
-  margin: 16px 0;
-  padding: 0 16px;
-  max-width: 80vw;
+.date-subheader {
+  font-size: 14px;
+  color: var(--ion-color-disabled-dark) !important;
+  font-weight: 300 !important;
+}
+
+ion-list.messages {
+  background-color: var(--ion-color-light) !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 100%;
+}
+
+ion-item.archive-message {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+}
+
+ion-item.chat-message {
+  border-radius: 25px !important;
+  width: auto;
+  max-width: 320px;
+}
+
+.left-message {
+  margin-left: auto;
+  text-align: right;
+}
+
+.right-message {
+  margin-right: auto;
+  text-align: left;
+}
+
+ion-input.message-input {
+  border-radius: 99px !important;
+  padding: 16px;
+  border: 1px solid black;
+  width: 100%;
 }
