--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -17,7 +17,7 @@
 }
 
 :root {
-  --ion-background-color: #fff !important;
+  --ion-background-color: #fbf8f1 !important;
   --ion-background-color-rgb: 252, 252, 252 !important;
 
   --ion-color-primary: #cda36a !important;
@@ -41,7 +41,7 @@
   --ion-color-tertiary-contrast-rgb: 0, 0, 0 !important;
   --ion-color-tertiary-shade: #96a8bb !important;
   --ion-color-tertiary-tint: #b3c5d9 !important;
-  --ion-color-light: #fbf8f1 !important;
+  --ion-color-light: #ffff !important;
   --ion-color-light-rgb: 255, 255, 255 !important;
   --ion-color-light-contrast: #000000 !important;
   --ion-color-light-contrast-rgb: 0, 0, 0 !important;
@@ -55,10 +55,6 @@
   --ion-color-medium: #b2b2b2 !important;
   --ion-color-danger: #ce1d1d !important;
 
-  /* --ion-toolbar-segment-color: #352015 !important;
-  --ion-toolbar-segment-color-checked: #cda36a !important;
-  --ion-segment-button-color: #ffff !important;
- */
   --ion-font-family: "Manrope", system-ui !important;
 
   --ion-segment-button-font-weight: 600 !important;
